--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/android": "^1.5.2",
     "@capacitor/core": "1.5.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -26,6 +27,7 @@
     "@ionic/angular": "^5.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -35,11 +37,14 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@babel/compat-data": "^7.8.0",
+    "@babel/preset-env": "7.8.0",
     "@capacitor/cli": "1.5.1",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "babel-loader": "8.1.0",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,6 +57,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
   },
   "description": "An Ionic project"
 }
